--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 
-Large Language Models (LLMs) excel in tasks like code generation and debugging but struggle with understanding complex inter-dependencies in large, multi-file repositories. This research aims to address these limitations by formalizing dependencies between code edits, focusing on causal-effect relationships and logical sequencing. Using multi-agent orchestration and dependency analysis, we create a framework to enhance contextual understanding and decision-making. We evaluate its effectiveness in managing complex edits and aligning with user intent, aiming to reduce cognitive load, improve productivity, and advance AI-assisted software development.
+Large Language Models (LLMs) excel in tasks like code generation and debugging but struggle with understanding complex interdependencies in large, multifile repositories. This research aims to address these limitations by formalizing dependencies between code edits, focusing on causal-effect relationships and logical sequencing. Using multi-agent orchestration and dependency analysis, we create a framework to enhance contextual understanding and decision-making. We evaluated its effectiveness in managing complex edits and aligning with user intent, with the aim of reducing cognitive load, improving productivity, and improving AI-assisted software development.
 
 
 \noindent\textbf{Subject Descriptors:}
