--- a/intro.tex
+++ b/intro.tex
@@ -2,9 +2,9 @@
 
 \section{Motivation}
 
-Large Language Models (LLMs) have demonstrated remarkable performance in code-related tasks, leveraging their extensive pre-training on programming languages and frameworks. Among these tasks, code completion has emerged as a key application, enabling LLMs to assist developers by predicting and generating code in real-time. This capability has significantly improved development efficiency and productivity, leading to the widespread adoption of AI Integrated Development Environment (IDE), such as GitHub Copilot, Cursor, and TraeAI.
+Large Language Models (LLMs) have demonstrated remarkable performance in code-related tasks \cite{codeium, marscode, copilot}, leveraging their extensive pre-training on programming languages and frameworks. Among these tasks, code completion has emerged as a key application, enabling LLMs to assist developers by predicting and generating code in real-time. This capability has significantly improved development efficiency and productivity, leading to the widespread adoption of AI Integrated Development Environment (IDE), such as GitHub Copilot, Cursor, and TraeAI.
 
-While much of the current focus of code completion is on the immediate file that a developer is working on, leveraging repository-level contextual information provides additional opportunities to improve code completion. This context includes  core function definitions, configuration files, and code snippets from elsewhere in the repository that align with the developer’s current logic. By incorporating this broader context, LLMs can generate more accurate and context-aware code, ultimately increasing the acceptance rate of suggestions and further enhancing coding efficiency. Although both academia and the industry have explored how to leverage repository-level information to help LLMs predict code, several practical challenges remain under-explored, particularly in real-world production environments.
+While much of the current focus of code completion is on the immediate file that a developer is working on, leveraging repository-level contextual information provides additional opportunities to improve code completion. This context includes  core function definitions, configuration files, and code snippets from elsewhere in the repository that align with the developer’s current logic. By incorporating this broader context, LLMs can generate more accurate and context-aware code \cite{banerjee2024contextmatterspushingboundaries}, ultimately increasing the acceptance rate of suggestions and further enhancing coding efficiency. Although both academia and the industry have explored how to leverage repository-level information to help LLMs predict code, several practical challenges remain under-explored, particularly in real-world production environments.
 
 % Despite these advancements, existing LLM-powered code assistants exhibit significant limitations in understanding the broader context and intent behind user edits. Their recommendations are predominantly localized, with insufficient consideration of inter-dependencies across interconnected code segments. This lack of contextual awareness becomes particularly problematic in large, multi-file projects, where such inter-dependencies are critical for maintaining code consistency and correctness. Consequently, these limitations often result in suboptimal or counterproductive suggestions, reducing the overall effectiveness of these tools.
 
@@ -13,7 +13,7 @@ While much of the current focus of code completion is on the immediate file that
 \newpage
 \section{Objective}
 
-Current approaches do not effectively incorporate developers’ cross-file browsing and editing behavior, missing valuable intent information. This research seeks to address this limitation by formalizing methods to infer, prioritize, and sequence dependencies between edits. By enhancing understanding of causal-effect relationships and edit sequencing, the objective is to empower LLM agents to:
+Current approaches do not effectively incorporate developers’ cross-file browsing and editing behavior \cite{guan2024contextmodule}, missing valuable intent information. This research seeks to address this limitation by formalizing methods to infer, prioritize, and sequence dependencies between edits. By enhancing understanding of causal-effect relationships and edit sequencing, the objective is to empower LLM agents to:
 
 \begin{enumerate}
     \item Anticipate user requirements by identifying context-aware dependencies.
